--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -147,10 +147,17 @@
      <string>Machine</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menu_Window">
+    <property name="title">
+     <string>Window</string>
+    </property>
+    <addaction name="actionJogging"/>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edit"/>
    <addaction name="menuMachine"/>
    <addaction name="menu_Help"/>
+   <addaction name="menu_Window"/>
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="minimumSize">
@@ -969,6 +976,11 @@
    </property>
    <property name="toolTip">
     <string> Connect</string>
+   </property>
+  </action>
+  <action name="actionJogging">
+   <property name="text">
+    <string>Jogging</string>
    </property>
   </action>
  </widget>
