--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -517,6 +517,17 @@
    </attribute>
    <addaction name="actionConnect"/>
   </widget>
+  <widget class="QToolBar" name="toolBarTransform">
+   <property name="windowTitle">
+    <string>toolBarTransform</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
