--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -528,6 +528,15 @@
     <bool>false</bool>
    </attribute>
   </widget>
+  <widget class="QDockWidget" name="joggingDock">
+   <property name="windowTitle">
+    <string>Jogging Panel</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="joggingContents"/>
+  </widget>
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
