--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -548,7 +548,79 @@
    </attribute>
    <widget class="QWidget" name="joggingContents"/>
   </widget>
+  <widget class="QToolBar" name="toolBarFile">
+   <property name="windowTitle">
+    <string>toolBarFile</string>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="separator"/>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarHistory">
+   <property name="windowTitle">
+    <string>toolBarHistory</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="separator"/>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedo"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarImage">
+   <property name="windowTitle">
+    <string>toolBarImage</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionTrace"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarVector">
+   <property name="windowTitle">
+    <string>toolBarVector</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionPathOffset"/>
+  </widget>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-open.png</normaloff>:/images/icon-open.png</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
@@ -557,6 +629,10 @@
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-save.png</normaloff>:/images/icon-save.png</iconset>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -597,6 +673,10 @@
    </property>
   </action>
   <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-undo.png</normaloff>:/images/icon-undo.png</iconset>
+   </property>
    <property name="text">
     <string>Undo</string>
    </property>
@@ -605,6 +685,10 @@
    </property>
   </action>
   <action name="actionRedo">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-redo.png</normaloff>:/images/icon-redo.png</iconset>
+   </property>
    <property name="text">
     <string>Redo</string>
    </property>
@@ -942,6 +1026,10 @@
    </property>
   </action>
   <action name="actionTrace">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-trace.png</normaloff>:/images/icon-trace.png</iconset>
+   </property>
    <property name="text">
     <string>Trace</string>
    </property>
@@ -952,6 +1040,10 @@
    </property>
   </action>
   <action name="actionPathOffset">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-offset.png</normaloff>:/images/icon-offset.png</iconset>
+   </property>
    <property name="text">
     <string>Offset</string>
    </property>
@@ -971,6 +1063,10 @@
    </property>
   </action>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="../../qml.qrc">
+     <normaloff>:/images/icon-new.png</normaloff>:/images/icon-new.png</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
