--- a/src/widgets/panels/doc-panel.ui
+++ b/src/widgets/panels/doc-panel.ui
@@ -125,7 +125,7 @@
            </sizepolicy>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <item>
            <property name="text">
@@ -140,6 +140,11 @@
           <item>
            <property name="text">
             <string>High (500 DPI)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ultra High (1000 DPI)</string>
            </property>
           </item>
          </widget>
