--- a/src/windows/preview-window.ui
+++ b/src/windows/preview-window.ui
@@ -23,24 +23,19 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="0">
-         <widget class="QLabel" name="requiredTime">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item alignment="Qt::AlignRight">
+         <widget class="QLabel" name="requiredTimeTitle">
           <property name="text">
-           <string>Required Time</string>
+           <string>Required Time: </string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="requiredTimeLabel">
+          <property name="text">
+           <string>0:0:0</string>
           </property>
          </widget>
         </item>
