--- a/qml.qrc
+++ b/qml.qrc
@@ -61,6 +61,7 @@
         <file>images/icon-sharpen.png</file>
         <file>images/icon-trace.png</file>
         <file>images/icon-preview.png</file>
+        <file>images/icon-frame.png</file>
         <file>images/icon-start.png</file>
         <file>images/icon-pause.png</file>
         <file>images/icon-stop.png</file>
@@ -123,6 +124,7 @@
         <file>images/dark/icon-sharpen.png</file>
         <file>images/dark/icon-trace.png</file>
         <file>images/dark/icon-preview.png</file>
+        <file>images/dark/icon-frame.png</file>
         <file>images/dark/icon-start.png</file>
         <file>images/dark/icon-pause.png</file>
         <file>images/dark/icon-stop.png</file>
