Feature/Support 2 types of layout modes (#109)
* Support 2 default types of layout reset

* Add config files to qml

--- a/qml.qrc
+++ b/qml.qrc
@@ -133,5 +133,7 @@
         <file>resources/machines.json</file>
         <file>i18n/zh-Hant-TW.qm</file>
         <file>qtquickcontrols2.conf</file>
+        <file>essentialUI.ini</file>
+        <file>classicsUI.ini</file>
     </qresource>
 </RCC>
